--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+The Community firn model
+
+Developed at the University of Washington Department of Earth and Space Sciences
+C. Max Stevens
+Ed Waddington
+Jessica Lundin
+Emma Kahle
+Annika Horlings
+Brita Horlings
+
