--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="repository_url}}">View on GitHub</a>
 
-          <h1 id="project_title">Slate</h1>
-          <h2 id="project_tagline">A responsive theme for GitHub Pages</h2>
+          <h1 id="project_title">CFM</h1>
+          <h2 id="project_tagline">The Community Firn Model</h2>
 
           <section id="downloads">
             <a class="zip_download_link" href="#">Download this project as a .zip file</a>
@@ -31,7 +31,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>A simple, legible layout.</h1>
+        <h1>For all your firn-modeling needs</h1>
         <p>Slate is a simple theme that I created for the <a href="http://pages.github.com">GitHub Pages automatic generator</a>. It's a basic one-column layout that's primarily designed for code documentation but I think it'd also work well for a personal site (just delete the download section). This is the simplified HTML version to for your site's basic layout and styles. Clone these files and replace this content to get the ball rolling.</p>
 
         <h1>Headline 1</h1>
